<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>topological_action_planner_msgs</name>
  <version>0.0.1</version>
  <description>Message and service definitions for the topological_action_planner</description>

  <maintainer email="loy.vanbeek@gmail.com">Loy van Beek</maintainer>
  <author email="loy.vanbeek@gmail.com">Loy van Beek</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
